--- a/pages/test/componentPage.module.scss
+++ b/pages/test/componentPage.module.scss
@@ -9,10 +9,10 @@
   display: flex;
   justify-content: center;
   width: 100px;
-  left: 0px;
+  left: 0;
   top: 15px;
   background: #FFFFFF;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
 
   &__arrow {
     position: absolute;
