--- a/pages/test/componentPage.module.scss
+++ b/pages/test/componentPage.module.scss
@@ -96,7 +96,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  background: url('../images/Ellipse 21.svg') no-repeat;
+  /*background: url('../images/Ellipse 21.svg') no-repeat;*/
   margin-top: 76px;
   height: 120px;
   width: 120px;
@@ -108,7 +108,6 @@
     font-size: 24px;
     line-height: 130%;
     display: flex;
-    margin-top: 44px;
     margin-left: auto;
     margin-right: auto;
   }
